--- a/i18n/en.json
+++ b/i18n/en.json
@@ -78,7 +78,7 @@
 	"vector-readability-survey-fontSize": "Font size",
 	"vector-readability-survey-lineHeight": "Line height",
 	"vector-readability-survey-paragraphSpacing": "Paragraph spacing",
-	"vector-readability-survey-optout": "Press continue to send us your design and publish your feedback on the next page. Click [[#close-vector-survey|here]] to remove this tool.",
+	"vector-readability-survey-optout": "Press continue to send us your design and publish your feedback on the next page. [[#close-vector-survey|Remove this tool]].",
 	"vector-readability-survey-randomize": "randomize",
 	"vector-readability-survey-reset": "reset",
 	"vector-readability-survey-share": "continue"
