[Prototype] Edit project link page on reading prototype
Changes project page link to use Special:MyLanguage

Change-Id: I99322f3492b85bd65828453a98d3cba50b9525c7

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -74,7 +74,7 @@
 	"vector-page-tools-unpinned-popup": "The tools menu has been moved here.",
 	"vector-main-menu-unpinned-popup": "The main menu has been moved here.",
 	"vector-readability-survey-title": "Wikimedia reading tool",
-	"vector-readability-survey-description": "How does the text on Wikipedia look best for you? Use the sliders below to adjust the appearance. Learn more about [[metawiki:Reading/Web/Accessibility for reading|Accessibility for reading project]].",
+	"vector-readability-survey-description": "How does the text on Wikipedia look best for you? Use the sliders below to adjust the appearance. Learn more about the [[mw:Special:MyLanguage/Reading/Web/Accessibility for reading|Accessibility for reading project]].",
 	"vector-readability-survey-fontSize": "Font size",
 	"vector-readability-survey-lineHeight": "Line height",
 	"vector-readability-survey-paragraphSpacing": "Paragraph spacing",
