Add multiple font size to frontend
Use integer value going forward as it will be easier
to manage.

Bug: T346954
Change-Id: I041a0cb21e872700ceeeddd3a39922e456aa7bb8

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -57,8 +57,10 @@
 	"vector-feature-custom-font-size-name": "Heading label for font size",
 	"vector-feature-limited-width-0-label": "Label for option to disable limited width.",
 	"vector-feature-limited-width-1-label": "Label for option to enable limited width.",
-	"vector-feature-custom-font-size-disabled-label": "Label for small (legacy) font size.",
-	"vector-feature-custom-font-size-enabled-label": "Label for standard font size.",
+	"vector-feature-custom-font-size-0-label": "Label for small (legacy) font size.",
+	"vector-feature-custom-font-size-1-label": "Label for standard font size.",
+	"vector-feature-custom-font-size-2-label": "Label for large font size.",
+	"vector-feature-custom-font-size-3-label": "Label for x-large font size.",
 	"vector-search-loader": "Text to display below search input while the search suggestion module is loading",
 	"vector-searchsuggest-containing": "Label used in the special item of the search suggestions list which gives the user an option to perform a full text search for the term. Used in the Codex typeahead search component.",
 	"vector-intro-page": "Introduction or tutorial page for the wiki. Typically either Project/Help:Introduction ([[d:Q3945]]) or Project/Help:Tutorial ([[d:Q915263]]).",
