--- a/i18n/en.json
+++ b/i18n/en.json
@@ -40,8 +40,10 @@
 	"vector-feature-custom-font-size-name": "Type size",
 	"vector-feature-limited-width-0-label": "Full width",
 	"vector-feature-limited-width-1-label": "Limited width",
-	"vector-feature-custom-font-size-disabled-label": "Small",
-	"vector-feature-custom-font-size-enabled-label": "Standard",
+	"vector-feature-custom-font-size-0-label": "Small",
+	"vector-feature-custom-font-size-1-label": "Standard",
+	"vector-feature-custom-font-size-2-label": "Large",
+	"vector-feature-custom-font-size-3-label": "X-Large",
 	"vector-search-loader": "Loading search suggestions",
 	"vector-searchsuggest-containing": "Search for pages containing <strong class=\"cdx-typeahead-search__search-footer__query\">$1</strong>",
 	"vector-intro-page": "Help:Introduction",
