Make Vector feature flags compatible with beta features
- Added Key 'beta' to features config in skin.json. As usual this also supported by global configs.
- Added feature management logic to check for beta feature enabled status and the user's selection of utilising the vector beta features.
- Added VECTOR_BETA_FEATURES to Constants.php which is an array that holds features names that would be enabled.
- Removed final from class declaration of OverridableConfigRequirement class, as it does interfere with the mocking in the current setup

Remaining Work:
- Missing images to be added in the hook to show in beta features under Special:Preferences -- this will be added in a followup

Bug: T347772
Change-Id: I7bf8284e328c66c019c392f57207cab21ce0d4f6

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -83,5 +83,7 @@
 	"vector-readability-survey-optout": "Press continue to send us your design and publish your feedback on the next page. [[#close-vector-survey|Remove this tool]].",
 	"vector-readability-survey-randomize": "randomize",
 	"vector-readability-survey-reset": "reset",
-	"vector-readability-survey-share": "continue"
+	"vector-readability-survey-share": "continue",
+	"vector-2022-beta-preview-label": "Vector 2022 beta",
+	"vector-2022-beta-preview-description": "Get early previews of new Vector 2022 features."
 }
