--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,11 +35,11 @@
 	"vector-jumptosearch": "Jump to search",
 	"vector-jumptocontent": "Jump to content",
 	"vector-more-actions": "More",
-	"vector-client-preferences": "Reading settings",
+	"vector-client-preferences": "Theme",
 	"vector-feature-limited-width-name": "Column width",
 	"vector-feature-custom-font-size-name": "Type size",
-	"vector-feature-limited-width-0-label": "Full width",
-	"vector-feature-limited-width-1-label": "Limited width",
+	"vector-feature-limited-width-0-label": "Wide",
+	"vector-feature-limited-width-1-label": "Standard",
 	"vector-feature-custom-font-size-0-label": "Small",
 	"vector-feature-custom-font-size-1-label": "Standard",
 	"vector-feature-custom-font-size-2-label": "Large",
