Make client prefs fully pinnable
Bug: T351141
Change-Id: Ic4a166fb3234b27dbf3d37891abfdf15781c8867

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,7 +35,7 @@
 	"vector-jumptosearch": "Jump to search",
 	"vector-jumptocontent": "Jump to content",
 	"vector-more-actions": "More",
-	"vector-client-preferences": "Theme",
+	"vector-client-prefs-label": "Theme",
 	"vector-feature-limited-width-name": "Column width",
 	"vector-feature-custom-font-size-name": "Type size",
 	"vector-feature-limited-width-0-label": "Wide",
@@ -75,6 +75,7 @@
 	"vector-toc-unpinned-popup": "The table of contents has been moved here.",
 	"vector-page-tools-unpinned-popup": "The tools menu has been moved here.",
 	"vector-main-menu-unpinned-popup": "The main menu has been moved here.",
+	"vector-client-prefs-unpinned-popup": "The appearance menu has been moved here.",
 	"vector-readability-survey-title": "Wikimedia reading tool",
 	"vector-readability-survey-description": "How does the text on Wikipedia look best for you? Use the sliders below to adjust the appearance. Learn more about the [[mw:Special:MyLanguage/Reading/Web/Accessibility for reading|Accessibility for reading project]].",
 	"vector-readability-survey-fontSize": "Font size",
