--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -52,7 +52,7 @@
 	"vector-jumptosearch": "Accessibility link for jumping to the site search. Visually hidden by default.\n\nSee also\n* {{msg-mw|Search}}",
 	"vector-jumptocontent": "Accessibility link for jumping to the content and skipping the navigation. Visually hidden by default.",
 	"vector-more-actions": "Label in the Vector skin's menu for the less-important or rarer actions which are not shown as tabs (like moving the page, or for sysops deleting or protecting the page), as well as (for users with a narrow viewing window in their browser) the less-important tab actions which the user's browser is unable to fit in. {{Identical|More}}",
-	"vector-client-preferences": "Heading for client preferences",
+	"vector-client-prefs-label": "Heading for client preferences",
 	"vector-feature-limited-width-name": "Heading label for limited width",
 	"vector-feature-custom-font-size-name": "Heading label for font size",
 	"vector-feature-limited-width-0-label": "Label for option to disable limited width.",
@@ -92,6 +92,7 @@
 	"vector-toc-unpinned-popup": "Text to show in popup body when Table of Contents ({{msg-mw|vector-toc-label}}) has been moved.",
 	"vector-page-tools-unpinned-popup": "Text to show in popup body when Page Tools ({{msg-mw|vector-page-tools-label}}) has been moved.",
 	"vector-main-menu-unpinned-popup": "Text to show in popup body when Main menu ({{msg-mw|vector-main-menu-label}}) has been moved.",
+	"vector-client-prefs-unpinned-popup": "Text to show in popup body when Appearance menu ({{msg-mw|vector-client-prefs-label}}) has been moved.",
 	"vector-readability-survey-title": "The title of the readability survey prototype",
 	"vector-readability-survey-description": "The description of the readability survery prototype",
 	"vector-readability-survey-fontSize": "Label for readability survey font size slider",
