--- a/i18n/en.json
+++ b/i18n/en.json
@@ -36,13 +36,13 @@
 	"vector-jumptocontent": "Jump to content",
 	"vector-more-actions": "More",
 	"vector-client-prefs-label": "Theme",
-	"vector-feature-limited-width-name": "Column width",
-	"vector-feature-custom-font-size-name": "Type size",
+	"vector-feature-limited-width-name": "Width",
+	"vector-feature-custom-font-size-name": "Text",
 	"vector-feature-limited-width-0-label": "Wide",
 	"vector-feature-limited-width-1-label": "Standard",
-	"vector-feature-custom-font-size-0-label": "Compact",
+	"vector-feature-custom-font-size-0-label": "Small",
 	"vector-feature-custom-font-size-1-label": "Standard",
-	"vector-feature-custom-font-size-2-label": "Open",
+	"vector-feature-custom-font-size-2-label": "Large",
 	"vector-search-loader": "Loading search suggestions",
 	"vector-searchsuggest-containing": "Search for pages containing <strong class=\"cdx-typeahead-search__search-footer__query\">$1</strong>",
 	"vector-intro-page": "Help:Introduction",
@@ -71,10 +71,10 @@
 	"vector-prefs-limited-width": "Enable limited width mode",
 	"vector-prefs-limited-width-help": "Enable limited width mode for improved reading experience.",
 	"empty-language-selector-body": "Page contents not supported in other languages.",
-	"vector-toc-unpinned-popup": "The table of contents has been moved here.",
-	"vector-page-tools-unpinned-popup": "The tools menu has been moved here.",
-	"vector-main-menu-unpinned-popup": "The main menu has been moved here.",
-	"vector-client-prefs-unpinned-popup": "The appearance menu has been moved here.",
+	"vector-toc-unpinned-popup": "The table of contents has moved here.",
+	"vector-page-tools-unpinned-popup": "The tools menu has moved here.",
+	"vector-main-menu-unpinned-popup": "The main menu has moved here.",
+	"vector-client-prefs-unpinned-popup": "The appearance menu has moved here.",
 	"vector-readability-survey-title": "Wikimedia reading tool",
 	"vector-readability-survey-description": "How does the text on Wikipedia look best for you? Use the sliders below to adjust the appearance. Learn more about the [[mw:Special:MyLanguage/Reading/Web/Accessibility for reading|Accessibility for reading project]].",
 	"vector-readability-survey-fontSize": "Font size",
@@ -84,6 +84,6 @@
 	"vector-readability-survey-randomize": "randomize",
 	"vector-readability-survey-reset": "reset",
 	"vector-readability-survey-share": "continue",
-	"vector-2022-beta-preview-label": "Vector 2022 beta",
-	"vector-2022-beta-preview-description": "Get early previews of new Vector 2022 features."
+	"vector-2022-beta-preview-label": "Accessibility for Reading (Vector 2022)",
+	"vector-2022-beta-preview-description": "Get early access to the new reading accessibility features, such as typography improvements and night mode."
 }
