Rename "Theme" to "Appearance" in reading accesibility preferences
Appearance better communicates this section than theme, so let's change
the heading to reflect.  Note this only updates the english heading and
the qqq remains unchanged at this time

Visual diff in english as it updates text on all pages

Bug: T354371
Change-Id: I6824d1d970a3fd4e6d7292d8a493abbcb736bd5d

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,7 +35,7 @@
 	"vector-jumptosearch": "Jump to search",
 	"vector-jumptocontent": "Jump to content",
 	"vector-more-actions": "More",
-	"vector-client-prefs-label": "Theme",
+	"vector-client-prefs-label": "Appearance",
 	"vector-feature-limited-width-name": "Width",
 	"vector-feature-custom-font-size-name": "Text",
 	"vector-feature-limited-width-0-label": "Wide",
