Register night mode as a client preference
The night mode setting should only show up if the feature flag
is enabled.

The messages are currently added to Vector, but we may want to upstream
these to core in future.

Change-Id: Idcd53399fa06821bbf5f463d1a242ecf59442c70

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -60,6 +60,11 @@
 	"vector-feature-custom-font-size-0-label": "Label for small (legacy) font size. An adjective that describes \"text\" ({{msg-mw|Vector-feature-custom-font-size-name}}).",
 	"vector-feature-custom-font-size-1-label": "Label for standard font size. An adjective that describes \"text\" ({{msg-mw|Vector-feature-custom-font-size-name}}).",
 	"vector-feature-custom-font-size-2-label": "Label for large font size. An adjective that describes \"text\" ({{msg-mw|Vector-feature-custom-font-size-name}}).",
+	"skin-night-mode-name": "Label for setting that allows you to change theme.",
+	"skin-night-mode-description": "Description for night mode.",
+	"skin-night-mode-0-label": "Label for light theme (standard mode).",
+	"skin-night-mode-1-label": "Label for night theme (dark mode).",
+	"skin-night-mode-2-label": "Label for night theme (automatic mode which respects any operating system setting).",
 	"vector-search-loader": "Text to display below search input while the search suggestion module is loading",
 	"vector-searchsuggest-containing": "Label used in the special item of the search suggestions list which gives the user an option to perform a full text search for the term. Used in the Codex typeahead search component.",
 	"vector-intro-page": "Introduction or tutorial page for the wiki. Typically either Project/Help:Introduction ([[d:Q3945]]) or Project/Help:Tutorial ([[d:Q915263]]).",
