--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,6 +43,11 @@
 	"vector-feature-custom-font-size-0-label": "Small",
 	"vector-feature-custom-font-size-1-label": "Standard",
 	"vector-feature-custom-font-size-2-label": "Large",
+	"skin-night-mode-name": "Color",
+	"skin-night-mode-description": "Reduces the light emitted by device screens.",
+	"skin-night-mode-0-label": "Day",
+	"skin-night-mode-1-label": "Night",
+	"skin-night-mode-2-label": "Automatic",
 	"vector-search-loader": "Loading search suggestions",
 	"vector-searchsuggest-containing": "Search for pages containing <strong class=\"cdx-typeahead-search__search-footer__query\">$1</strong>",
 	"vector-intro-page": "Help:Introduction",
