Revert "Localisation updates from https://translatewiki.net."
This reverts commit 7548b0dd991a060d2ea332eb63a8112bc20a468e.

Reason for revert: Breaks CI
1 documented message is undefined.
Message "vector-language-redirect-to-top" is documented but undefined.
Build step 'Execute shell' marked build as failure

Change-Id: I6f893e9348d7452f990544b21085af2fa9dbdd8a

--- a/i18n/it.json
+++ b/i18n/it.json
@@ -19,7 +19,7 @@
 			"ValterVB"
 		]
 	},
-	"vector-skin-desc": "Fornisce 2 temi Vector\n* 2011 - La versione moderna del MonoBook con un aspetto rinnovato e molti miglioramenti dell'usabilità\n* 2022 - Vector realizzata nell'ambito del progetto WMF [[mw:Desktop Improvements|Migliorie all'IU desktop]]",
+	"vector-skin-desc": "Fornisce 2 temi Vector\n* 2011 - La versione moderna del MonoBook con un aspetto rinnovato e molti miglioramenti dell'usabilità\n* 2022 - Vector realizzata nell'ambito del progetto WMF [[mw:Desktop Improvements]]",
 	"prefs-vector-enable-vector-1-label": "Usa Legacy Vector",
 	"prefs-vector-enable-vector-1-help": "Nei prossimi anni aggiorneremo gradualmente il tema Vector. Legacy Vector ti permetterà di visualizzare la vecchia versione di Vector (risalente al dicembre 2019). Per scoprirne di più sulle novità, visita la nostra [[mw:Reading/Web/Desktop_Improvements|pagina del progetto]].",
 	"vector-opt-out": "Torna al vecchio aspetto",
