--- a/i18n/tr.json
+++ b/i18n/tr.json
@@ -24,7 +24,7 @@
 	"skinname-vector": "Eski Vektör (2010)",
 	"skinname-vector-2022": "Vector (2022)",
 	"vector-specialversion-name": "Vector",
-	"vector-skin-desc": "2 Vector görünümü sağlar:\n* 2011 - MonoBook'un yeni görünümü ve birçok kullanılabilirlik geliştirmesiyle Modern sürümü.\n* 2022 - Vector, WMF [[mw:Desktop Improvements|Masaüstü İyileştirmeleri]] projesinin bir parçası olarak oluşturuldu.",
+	"vector-skin-desc": "2 Vector görünümleri sağlar:\n* 2011 - MonoBook'un yeni görünümü ve birçok kullanılabilirlik geliştirmesiyle Modern versiyonu.\n* 2022 - Vector, WMF [[mw:Desktop Improvements|mw:Masaüstü İyileştirmeleri]] projesinin bir parçası olarak oluşturuldu.",
 	"prefs-vector-enable-vector-1-label": "Eski Vektörü Kullan",
 	"prefs-vector-enable-vector-1-help": "Önümüzdeki birkaç yıl içinde Vektör görünümünü kademeli olarak güncelleyeceğiz. Eski Vektörün eski sürümünü görüntülemenize izin verir (Aralık 2019 itibariyle). Güncellemeler hakkında daha fazla bilgi için [[mw:Reading/Web/Desktop_Improvements|proje sayfamıza]] gidin.",
 	"vector-opt-out": "Eski görünüme geç",
