--- a/i18n/en.json
+++ b/i18n/en.json
@@ -43,7 +43,7 @@
 	"vector-feature-custom-font-size-1-label": "Standard",
 	"vector-feature-custom-font-size-2-label": "Large",
 	"skin-night-mode-name": "Color",
-	"skin-night-mode-description": "Reduces the light emitted by device screens.",
+	"skin-night-mode-description": "[Experimental version, high likelihood of experiencing issues] Reduces the light emitted by device screens.",
 	"skin-night-mode-0-label": "Day",
 	"skin-night-mode-1-label": "Night",
 	"skin-night-mode-2-label": "Automatic",
