Prepare for class and preference rename
Bug: T359983
Change-Id: I6937def83d3e71029bf99e5fa7c8e9d2eb96f1fa

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -47,6 +47,11 @@
 	"skin-night-mode-0-label": "Day",
 	"skin-night-mode-1-label": "Night",
 	"skin-night-mode-2-label": "Automatic",
+	"skin-theme-name": "Color",
+	"skin-theme-description": "[Experimental version, high likelihood of experiencing issues] Reduces the light emitted by device screens.",
+	"skin-theme-day-label": "Day",
+	"skin-theme-night-label": "Night",
+	"skin-theme-os-label": "Automatic",
 	"vector-search-loader": "Loading search suggestions",
 	"vector-searchsuggest-containing": "Search for pages containing <strong class=\"cdx-typeahead-search__search-footer__query\">$1</strong>",
 	"vector-intro-page": "Help:Introduction",
