Add exclusion notice for night mode feature
If night-mode is disabled on a certain page via the
exclude list in skin.json, then the following class:
".skin-theme-clientpref-excluded" will be added to the HTML element.

In this scenario, the related client-preferences
menu options are visible, but disabled, and a notice
is rendered below the options informing users of this state.

Bug: T361158
Change-Id: I46d335d079a2d27c7a4122e23ac7e479c286b886

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -52,6 +52,7 @@
 	"skin-theme-day-label": "Day",
 	"skin-theme-night-label": "Night",
 	"skin-theme-os-label": "Automatic",
+	"skin-theme-exclusion-notice": "This page is always in day mode.",
 	"vector-search-loader": "Loading search suggestions",
 	"vector-searchsuggest-containing": "Search for pages containing <strong class=\"cdx-typeahead-search__search-footer__query\">$1</strong>",
 	"vector-intro-page": "Help:Introduction",
