--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -69,6 +69,7 @@
 	"skin-theme-day-label": "Label for light theme (standard mode).",
 	"skin-theme-night-label": "Label for night theme (dark mode).",
 	"skin-theme-os-label": "Label for night theme (automatic mode which respects any operating system setting).",
+	"skin-theme-exclusion-notice": "Text that informs you that the page is always in day mode.",
 	"vector-search-loader": "Text to display below search input while the search suggestion module is loading",
 	"vector-searchsuggest-containing": "Label used in the special item of the search suggestions list which gives the user an option to perform a full text search for the term. Used in the Codex typeahead search component.",
 	"vector-intro-page": "Introduction or tutorial page for the wiki. Typically either Project/Help:Introduction ([[d:Q3945]]) or Project/Help:Tutorial ([[d:Q915263]]).",
