feature(Vector): Standardises terminology to 'Dark Mode'
This update standardises the terminology from 'Night Mode' to
'Dark Mode' across interface messages. This change aligns with common
terminology used in the industry.

Changes:
- `i18n/en.json` and `i18n/qqq.json`: Updated labels and descriptions
  for UI elements from 'Night' to 'Dark' to reflect the new terminology.
  This includes changes in labels like 'skin-night-mode-0-label' to
  'Light' and 'skin-night-mode-1-label' to 'Dark'.
- `skin.json`: Updated descriptions in configuration settings to
  mention 'Dark Mode' instead of 'Night Mode', ensuring that
  documentation reflects current terminology.

Bug: T361157
Change-Id: I682a79fd7d9b37b4f908581e8fd28fd40f798c5c

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -44,13 +44,13 @@
 	"vector-feature-custom-font-size-2-label": "Large",
 	"skin-night-mode-name": "Color",
 	"skin-night-mode-description": "[Experimental version, high likelihood of experiencing issues] Reduces the light emitted by device screens.",
-	"skin-night-mode-0-label": "Day",
-	"skin-night-mode-1-label": "Night",
+	"skin-night-mode-0-label": "Light",
+	"skin-night-mode-1-label": "Dark",
 	"skin-night-mode-2-label": "Automatic",
 	"skin-theme-name": "Color",
 	"skin-theme-description": "[Experimental version, high likelihood of experiencing issues] Reduces the light emitted by device screens.",
-	"skin-theme-day-label": "Day",
-	"skin-theme-night-label": "Night",
+	"skin-theme-day-label": "Light",
+	"skin-theme-night-label": "Dark",
 	"skin-theme-os-label": "Automatic",
 	"skin-theme-exclusion-notice": "This page is always in day mode.",
 	"vector-search-loader": "Loading search suggestions",
@@ -86,5 +86,5 @@
 	"vector-main-menu-unpinned-popup": "The main menu has moved here.",
 	"vector-client-prefs-unpinned-popup": "The appearance menu has moved here.",
 	"vector-2022-beta-preview-label": "Accessibility for Reading (Vector 2022)",
-	"vector-2022-beta-preview-description": "Get early access to the new reading accessibility features, such as typography improvements and night mode."
+	"vector-2022-beta-preview-description": "Get early access to the new reading accessibility features, such as typography improvements and dark mode."
 }
