Add exclusion notice for "width" option in Appearance menu
Adds the notice "This page is always wide" and disables
the inputs for the "width" options in the Appearance menu
when pages are excluded via configuration ( `$wgVectorMaxWidthOptions`).

Bug: T364015
Change-Id: Ie99b41c9130f496ab23b60c95e551a9ea602d5a0

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -70,6 +70,7 @@
 	"vector-limited-width-toggle": "Toggle limited content width",
 	"vector-limited-width-toggle-on-popup": "You have switched your layout to full width. To go back to limited width, press this button.",
 	"vector-limited-width-toggle-off-popup": "You can toggle between a limited width and full width by clicking this button.",
+	"vector-feature-limited-width-exclusion-notice": "This page is always wide",
 	"vector-page-tools-label": "Tools",
 	"vector-page-tools-general-label": "General",
 	"vector-page-tools-actions-label": "Actions",
