feature(Vector): Add configurable font size exclusions
This patch introduces the ability to configure font size exclusions
for specific pages within the Vector skin, ensuring certain pages
always use a small font size. This change is part of ongoing improvements
to the Vector skin's customizability features.

Changes:
- Updated `skin.json` to include `VectorFontSizeConfigurableOptions`
- Added new i18n string `vector-feature-custom-font-size-exclusion-notice`
- Modified logic for font size exclusion handling in `FeatureManager.php`

Additional Notes:
- Affects testing and beta deployment environments, ensure relevant
  settings are updated in `LocalSettings.php`.
For testing and on beta deployment, these settings should be set in
the LocalSettings.php of the environment, example:

$wgVectorAppearance = [
    "logged_in" => true,
    "logged_out" => true,
    "beta" => true
];
$wgVectorFontSizeConfigurableOptions = [
	"exclude" => [
	"namespaces" => [ -1, 2, 6, 8, 10, 14, 100, 710, 828 ],
		"querystring" => [
			"action" => "edit|submit|diff|info|protect|delete|undelete|diff|history",
			"diff" => ".+"
		]
	]
];

Bug: T364887
Change-Id: I23b9c4fb63f35c7d27544197fead3ad7619c67f1

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -87,6 +87,7 @@
 	"vector-limited-width-toggle": "Toggle for control to limit content width.",
 	"vector-limited-width-toggle-on-popup": "Hint that points out the limited width toggle control.",
 	"vector-limited-width-toggle-off-popup": "Hint that points out the limited width toggle control.",
+	"vector-feature-custom-font-size-exclusion-notice" : "Notice when custom font size option is disabled.",
 	"vector-feature-limited-width-exclusion-notice": "Notice when limited width option is disabled.",
 	"vector-page-tools-label": "Label for the page tools pinnable dropdown\n{{identical|Tools}}",
 	"vector-page-tools-general-label": "Label for the page tools 'General' menu\n{{identical|General}}",
