--- a/i18n/en.json
+++ b/i18n/en.json
@@ -5,9 +5,9 @@
 	"skinname-vector": "Vector legacy (2010)",
 	"skinname-vector-2022": "Vector (2022)",
 	"vector-specialversion-name": "Vector",
-	"vector-skin-desc": "Provides 2 Vector skins:\n* 2011 - The Modern version of MonoBook with fresh look and many usability improvements.\n* 2022 - The Vector built as part of the WMF [[mw:Desktop Improvements|Desktop Improvements]] project.",
+	"vector-skin-desc": "Provides 2 Vector skins:\n* 2011 - The Modern version of MonoBook with fresh look and many usability improvements.\n* 2022 - The Vector built as part of the WMF [https://www.mediawiki.org/wiki/Desktop_Improvements Desktop Improvements] project.",
 	"prefs-vector-enable-vector-1-label": "Use Legacy Vector",
-	"prefs-vector-enable-vector-1-help": "Over the next few years, we will be gradually updating the Vector skin. Legacy Vector will allow you to view the old version of Vector (as of December 2019). To learn more about the updates, go to our [[mw:Reading/Web/Desktop_Improvements|project page]].",
+	"prefs-vector-enable-vector-1-help": "Over the next few years, we will be gradually updating the Vector skin. Legacy Vector will allow you to view the old version of Vector (as of December 2019). To learn more about the updates, go to our [https://www.mediawiki.org/wiki/Reading/Web/Desktop_Improvements project page].",
 	"vector-opt-out": "Switch to old look",
 	"vector-opt-out-tooltip": "Change your settings to go back to the old look of the skin (legacy Vector)",
 	"vector.css": "/* All CSS here will be loaded for users of the Vector skin */",
@@ -77,7 +77,7 @@
 	"vector-page-tools-actions-label": "Actions",
 	"vector-pin-element-label": "move to sidebar",
 	"vector-unpin-element-label": "hide",
-	"vector-2022-prefs-talkpage": "[[mw:Talk:Reading/Web/Desktop_Improvements|Discussion]]",
+	"vector-2022-prefs-talkpage": "[https://www.mediawiki.org/wiki/Talk:Reading/Web/Desktop_Improvements Discussion]",
 	"tooltip-vector-anon-user-menu-title": "More options",
 	"vector-page-tools-nav-label": "Page tools",
 	"vector-prefs-limited-width": "Enable limited width mode",
