--- a/i18n/en.json
+++ b/i18n/en.json
@@ -88,5 +88,7 @@
 	"vector-main-menu-unpinned-popup": "The main menu has moved here.",
 	"vector-appearance-unpinned-popup": "The appearance menu has moved here.",
 	"vector-2022-beta-preview-label": "Accessibility for Reading (Vector 2022)",
-	"vector-2022-beta-preview-description": "Get early access to the new reading accessibility features, such as typography improvements and dark mode."
+	"vector-2022-beta-preview-description": "Get early access to the new reading accessibility features, such as typography improvements and dark mode.",
+	"vector-night-mode-gadget-names": "dark-mode|dark-mode-toggle|dark-mode-toggle-pagestyles",
+	"vector-night-mode-gadget-warning": "You're using a dark mode gadget that interferes with this feature. [[Special:Preferences#mw-prefsection-gadgets|Disable the gadget]] to use dark mode."
 }
