Add width exclusion notice
Bug: T366216
Change-Id: If50e9adcec6f2fa139e793b3a8108f3b4dd689ca

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -36,9 +36,9 @@
 	"vector-more-actions": "More",
 	"vector-appearance-label": "Appearance",
 	"vector-feature-limited-width-name": "Width",
-	"vector-feature-custom-font-size-name": "Text",
 	"vector-feature-limited-width-0-label": "Wide",
 	"vector-feature-limited-width-1-label": "Standard",
+	"vector-feature-custom-font-size-name": "Text",
 	"vector-feature-custom-font-size-0-label": "Small",
 	"vector-feature-custom-font-size-1-label": "Standard",
 	"vector-feature-custom-font-size-2-label": "Large",
@@ -71,7 +71,7 @@
 	"vector-limited-width-toggle-on-popup": "You have switched your layout to full width. To go back to limited width, press this button.",
 	"vector-limited-width-toggle-off-popup": "You can toggle between a limited width and full width by clicking this button.",
 	"vector-feature-custom-font-size-exclusion-notice" : "This page always uses small font size",
-	"vector-feature-limited-width-exclusion-notice": "This page is always wide",
+	"vector-feature-limited-width-exclusion-notice": "The content is as wide as possible for your browser window.",
 	"vector-page-tools-label": "Tools",
 	"vector-page-tools-general-label": "General",
 	"vector-page-tools-actions-label": "Actions",
