Avoid using <noinclude> tag in Vector dark-mode i18n message
Replaces the unintuitive `<no<includeonly></includeonly>include>`
tag in the `vector-night-mode-issue-reporting-preload-content` i18n
message with a simpler HTML comment tag `<!-->`.

Bug: T367871
Change-Id: I3c2dd841af9616efccf42dc9616565fe9400d464

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -90,6 +90,6 @@
 	"vector-night-mode-issue-reporting-link-label": "Report an issue with dark mode",
 	"vector-night-mode-issue-reporting-link-notification": "Report received!",
 	"vector-night-mode-issue-reporting-preload-title": "$1 dark mode error",
-	"vector-night-mode-issue-reporting-preload-content": "<no<includeonly></includeonly>include> \n'''Instructions'''\n\nPlease describe how the dark mode colors are making Wikipedia difficult to read. Please include the section of the article where you found the issue. \n</no<includeonly></includeonly>include> \n'''Issue Description'''",
+	"vector-night-mode-issue-reporting-preload-content": "<!--\nInstructions\nPlease describe how the dark mode colors are making Wikipedia difficult to read.\nPlease include the section of the article where you found the issue.\n-->\n'''Issue Description'''",
 	"vector-night-mode-beta-tag": "(beta)"
 }
