--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -104,6 +104,7 @@
 	"vector-night-mode-gadget-names": "pipe-separated list of gadget names associated with the night mode gadget",
 	"vector-night-mode-gadget-warning": "a notice that night mode has been disabled due to a conflicting gadget, with a link to the gadgets page to disable",
 	"vector-night-mode-issue-reporting-notice-url": "A URL to be configured on the site-level {{notranslate}}",
+	"vector-night-mode-issue-reporting-notice-tooltip": "Tooltip for reporting errors in dark mode.",
 	"vector-night-mode-issue-reporting-link-label": "Label for a link to project-specific page where people can report issues with dark mode.",
 	"vector-night-mode-issue-reporting-link-notification": "Notification that shows after clicking link.",
 	"vector-night-mode-issue-reporting-preload-title": "The prefilled title of the form used to submit dark mode errors. $1 is a link to the current page, formatted as a wikitext external link, for example \"<nowiki>[https://en.wikipedia.org/wiki/Songhai_Empire Songhai Empire]</nowiki>\".",
