Add tooltip to appearance menu icon
Bug: T369849
Change-Id: If3a73746dce41f3659f61c68941ed3ed6ebb6fd1

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -35,6 +35,7 @@
 	"vector-jumptocontent": "Jump to content",
 	"vector-more-actions": "More",
 	"vector-appearance-label": "Appearance",
+	"vector-appearance-tooltip": "Change the appearance of the page's font size, width, and color",
 	"vector-feature-limited-width-name": "Width",
 	"vector-feature-limited-width-0-label": "Wide",
 	"vector-feature-limited-width-1-label": "Standard",
