Updating String for Title Attribute
Main menu, and table of contents were already good
I just needed to change Personal Settings

Bug: T329534
Change-Id: I168cd96fa04baf0662430f604e9583897f1fe653

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -36,7 +36,7 @@
 	"vector-more-actions": "More",
 	"vector-appearance-label": "Appearance",
 	"vector-appearance-tooltip": "Change the appearance of the page's font size, width, and color",
-	"vector-personal-tools-tooltip": "Change personal settings",
+	"vector-personal-tools-tooltip": "Personal settings",
 	"vector-feature-limited-width-name": "Width",
 	"vector-feature-limited-width-0-label": "Wide",
 	"vector-feature-limited-width-1-label": "Standard",
