--- a/i18n/en.json
+++ b/i18n/en.json
@@ -17,7 +17,7 @@
 	"vector-language-button-aria-label": "Go to an article in another language. Available in {{PLURAL:$1|$1 language|$1 languages}}",
 	"vector-language-button-label": "{{PLURAL:$1|$1 language|$1 languages}}",
 	"vector-no-language-button-label": "Add languages",
-	"vector-no-language-button-aria-label": "This article exist only in this language. Add the article for other languages",
+	"vector-no-language-button-aria-label": "This article is only available in this language. Add the article for other languages",
 	"vector-language-variant-switcher-label": "Change language variant",
 	"vector-action-addsection": "Add topic",
 	"vector-action-delete": "Delete",
