--- a/i18n/hr.json
+++ b/i18n/hr.json
@@ -90,6 +90,5 @@
 	"vector-night-mode-issue-reporting-link-label": "Prijavite probleme s tamnom temom",
 	"vector-night-mode-issue-reporting-link-notification": "Primili smo prijavu!",
 	"vector-night-mode-issue-reporting-preload-title": "Pogreška u tamnoj temi na stranici »$1«",
-	"vector-night-mode-issue-reporting-preload-content": "<!--\nOpišite kako boje u temnoj temi smanjuju čitljivost teksta. Napišite naslov odjeljka u kojemu ste naišli na problem.\n--> \n'''Opis problema'''",
-	"vector-night-mode-beta-tag": ""
+	"vector-night-mode-issue-reporting-preload-content": "<!--\nOpišite kako boje u temnoj temi smanjuju čitljivost teksta. Napišite naslov odjeljka u kojemu ste naišli na problem.\n--> \n'''Opis problema'''"
 }
